--- a/nodejs/email/frontend/src/styles/containers/Mails.css
+++ b/nodejs/email/frontend/src/styles/containers/Mails.css
@@ -2,10 +2,17 @@
 	min-height: 100vh;
 	min-width: 100vw;
 	background-color: #000000;
+	display: flex;
+    flex-direction: column;
 }
 
 .mail-content-row{
 	width: 100%;
 	display:flex;
 	flex-direction:row;
+	flex:auto;
+}
+
+.mail-content-body{
+	width: -webkit-fill-available;
 }
