--- a/nodejs/email/frontend/src/styles/containers/Sidemenu.css
+++ b/nodejs/email/frontend/src/styles/containers/Sidemenu.css
@@ -4,16 +4,16 @@
 }
 
 .sidemenu_open{
-	width:256px;
+	min-width:256px;
 	border-right: 1px solid #ffffff30;
 }
 
 .sidemenu_item{
-	color:white;
-	width: 240px;
-	height: 32px;
-	padding: 0 12px 0 20px;
-	display: flex;
+	color: white;
+    height: 32px;
+    padding: 0 0 0 28px;
+    margin: 0 12px 0 0;
+    display: flex;
     flex-direction: row;
     align-items: center;
 }
@@ -24,7 +24,6 @@
 }
 
 .sidemenu_compose_div{
-	width: 144px;
 	height: 48px;
 	background-color: white;
 	display: flex;
@@ -34,11 +33,10 @@
 }
 
 .sidemenu_compose{
-	width: 248px;
 	height: 48px;
-	padding-left: 8px;
-	margin-top: 16px;
-	margin-bottom: 16px;
+    padding: 0 80px 0 16px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .sidemenu_shrink{
