--- a/nodejs/email/frontend/src/styles/components/Splitter.css
+++ b/nodejs/email/frontend/src/styles/components/Splitter.css
@@ -15,18 +15,26 @@
 
 .vertical_splitter{
 	height: 100%;
-	border-right:2px solid;
+	border-right:10px solid;
+	cursor: pointer;
 }
 
 .horizontal_splitter{
 	width: 100%;
-	border-bottom:2px solid;
+	border-bottom:10px solid;
+	cursor: pointer;
 }
 
 .horizontal_splitter:hover{
-	border-bottom:4px solid blue;
+	border-bottom:10px solid blue;
+	cursor: pointer;
 }
 
 .container_vertical{
 	display: flex;
+}
+
+.split_horizontal{
+	display: flex;
+	flex-direction: column;
 }
